--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,28 @@
 </head>
 <body>
    
+    <div class="container">
+        <header>
+            <h1>Le Jeu Du Pendu</h1>
+        </header>
+        
+        <div class="container-pendu">
 
+            <svg height="300" width="250" class="svg-figure">
+                <!-- Support du pendu-->
+                <line x1="70" y1="50"  x2="160" y2="50"/>
+                <line x1="160" y1="50"  x2="160" y2="80"/>
+                <line x1="70" y1="50"  x2="70" y2="240"/>
+                <line x1="20" y1="240"  x2="120" y2="240"/>
+
+                <!-- Bonhomme-->
+                <!-- Dissin de la tête-->
+
+            </svg>
+        </div>
+
+    </div>
+    
 
     <script src="/js/script.js"></script>
 </body>
