--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <div class="container-pendu">
 
-            <svg height="300" width="250" class="svg-figure">
+            <svg height="300" width="250" class="svg-dessin">
                 <!-- Support du pendu-->
                 <line x1="70" y1="50"  x2="160" y2="50"/>
                 <line x1="160" y1="50"  x2="160" y2="80"/>
@@ -25,7 +25,9 @@
 
                 <!-- Bonhomme-->
                 <!-- Dissin de la tête-->
+                <circle cx="160" cy="95" r="15" class="dessin-bonhomme"/>
 
+                
             </svg>
         </div>
 
