Dessin du corps

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 <!-- Dissin de la tête-->
                 <circle cx="160" cy="95" r="15" class="dessin-bonhomme"/>
 
-                
+                <!-- Dissin du corps-->
+                <line x1="160" y1="110"  x2="160" y2="180" class="dessin-bonhomme"/>
             </svg>
         </div>
 
