Dessin des bras

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
                 <!-- Dissin du corps-->
                 <line x1="160" y1="110"  x2="160" y2="180" class="dessin-bonhomme"/>
+
+                 <!-- Dissin des bras-->
+                 <line x1="160" y1="140"  x2="140" y2="120" class="dessin-bonhomme"/>
+                 <line x1="160" y1="140"  x2="180" y2="120" class="dessin-bonhomme"/>
             </svg>
         </div>
 
