Dessin des jambes

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                  <!-- Dissin des bras-->
                  <line x1="160" y1="140"  x2="140" y2="120" class="dessin-bonhomme"/>
                  <line x1="160" y1="140"  x2="180" y2="120" class="dessin-bonhomme"/>
+
+                 <!-- Dissin des jambes-->
+                 <line x1="160" y1="180"  x2="140" y2="200" class="dessin-bonhomme"/>
+                 <line x1="160" y1="180"  x2="180" y2="200" class="dessin-bonhomme"/>
             </svg>
         </div>
 
