Mise en place de la police d'écriture

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    
     <div class="container">
-        <header>
+        <header class="titre">
             <h1>Le Jeu Du Pendu</h1>
         </header>
         
@@ -23,7 +23,7 @@
                 <line x1="70" y1="50"  x2="70" y2="240"/>
                 <line x1="20" y1="240"  x2="120" y2="240"/>
 
-                <!-- Bonhomme-->
+                <!-- Dessin du Bonhomme-->
                 <!-- Dissin de la tête-->
                 <circle cx="160" cy="95" r="15" class="dessin-bonhomme"/>
 
@@ -38,8 +38,13 @@
                  <line x1="160" y1="180"  x2="140" y2="200" class="dessin-bonhomme"/>
                  <line x1="160" y1="180"  x2="180" y2="200" class="dessin-bonhomme"/>
             </svg>
-        </div>
 
+            <!-- Bonnes lettres-->
+            <div class="mots" id="mots">Mot à trouver</div>
+        </div>
+        <footer class="footer">
+            <p>2022 &copy; Kesso</p>
+        </footer>
     </div>
     
 
