gestion des notifications

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <div class="mots" id="mots"></div>
 
             <div class="container-input">
-                <p>Entrez la lettre ou le bon mot</p>
+                <p>Entrez la lettre </p>
                 <div class="verification">
-                    <input type="text" placeholder="Entrez une lettre ou un mot">
+                    <input type="text" placeholder="Entrez une lettre" id="zoneSaisie">
                     <button type="submit" id="verifier">Vérifier</button>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                 <button id="btn-rejouer">Cliquez pour rejouer</button>
             </div>
             <div class="erreur">
-                <p>Mauvaises Lettres : <span class="lettreErronees"> a, b, c, d</span></p>
+                <p>Mauvaises Lettres : <span class="lettreErronees"></span></p>
             </div>
         </div>
         <footer class="footer">
